--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,18 @@ cache/
 out/
 
 # Ignores development broadcast logs
-!/broadcast
-/broadcast/*/31337/
-/broadcast/**/dry-run/
+#!/broadcast
+#/broadcast/*/31337/
+#/broadcast/**/dry-run/
 
 # Docs
 docs/
 
 # Dotenv file
 .env
+
+.DS_Store
+zkout/
+/broadcast
+/lib
+foundry.toml
